Fix root mouse capture with su binaries that don't like additional parameters after -c